# dsp_train

./: .gitattributes  .gitignore  CHATGPT_DSP_TUTORIAL_BRIEF.md  CMakeLists.txt  HANDOFF.md  README.md  TODO.md  manual_en.md  manual_ru.md
example_project_archives/: delay.dspedu  envelope.dspedu  filter.dspedu  lfo.dspedu  oscillator.dspedu  poly_synth_adsr.dspedu  simple_synth_voice.dspedu
example_projects/: README.md
example_projects/delay/: project.json
example_projects/delay/files/src/: main.cpp
example_projects/envelope/: project.json
example_projects/envelope/files/src/: main.cpp
example_projects/filter/: project.json
example_projects/filter/files/src/: main.cpp
example_projects/lfo/: project.json
example_projects/lfo/files/src/: main.cpp
example_projects/oscillator/: project.json
example_projects/oscillator/files/src/: main.cpp
example_projects/poly_synth_adsr/: project.json
example_projects/poly_synth_adsr/files/src/: AdsrEnvelope.h  MidiNoteUtils.h  PolySynthAdsrProcessor.h  PolySynthVoice.h  SimpleSawOscillator.h  StateVariableLowPass.h  main.cpp
example_projects/simple_synth_voice/: project.json
example_projects/simple_synth_voice/files/src/: MidiNoteUtils.h  SimpleGateEnvelope.h  SimpleLadderFilter.h  SimpleSawOscillator.h  SimpleSynthVoiceProcessor.h  main.cpp
scripts/: build_user_dsp.cmd  build_user_dsp.ps1  build_user_dsp.sh  build_windows.cmd  configure_windows.cmd  package_example_projects.cmd  package_example_projects.ps1  package_windows.cmd  package_windows.ps1
src/: main.cpp
src/app/: DspEducationStandApplication.cpp  DspEducationStandApplication.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
src/audio/: AudioConfiguration.h  AudioEngine.cpp  AudioEngine.h  SignalSources.cpp  SignalSources.h  WavFileSource.cpp  WavFileSource.h
src/dsp/: BuiltinProcessors.cpp  BuiltinProcessors.h
src/midi/: MidiBinding.cpp  MidiBinding.h  MidiPerformanceState.cpp  MidiPerformanceState.h
src/presets/: PresetManager.cpp  PresetManager.h
src/ui/: DarkIdeLookAndFeel.cpp  DarkIdeLookAndFeel.h  OscilloscopeBuffer.cpp  OscilloscopeBuffer.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  RealtimeControlsComponent.cpp  RealtimeControlsComponent.h  ScrollPassthroughControls.h  ToolWindow.cpp  ToolWindow.h
src/userdsp/: UserCodeDocumentManager.cpp  UserCodeDocumentManager.h  UserDspCompiler.cpp  UserDspCompiler.h  UserDspControllers.h  UserDspHost.cpp  UserDspHost.h  UserDspProjectManager.cpp  UserDspProjectManager.h  UserDspProjectUtils.cpp  UserDspProjectUtils.h
src/util/: AppPaths.h  AppSettings.cpp  AppSettings.h
templates/: UserDspTemplate.cpp
tests/: ExampleMonoSynthCompileSmoke.cpp  ExamplePolySynthCompileSmoke.cpp  TestMain.cpp
user_dsp_sdk/: UserDspApi.h
